Running version with BSSS/BLD

--- a/firmware/common/PhaseCavity/yaml/AppCore.yaml
+++ b/firmware/common/PhaseCavity/yaml/AppCore.yaml
@@ -88,7 +88,13 @@ AppCore: &AppCore
 #       at:
 #        offset: 0x06000000      
     ##################################################
-    BSSS_BLD:
+    BSSS:
        <<: *BsssAxiStream
        at:
         offset: 0x07000000      
+    ##################################################
+    BLD:
+       <<: *BsssAxiStream
+       at:
+        offset: 0x08000000      
+    ##################################################
