--- a/firmware/targets/LclsPCav/yaml/000TopLevel.yaml
+++ b/firmware/targets/LclsPCav/yaml/000TopLevel.yaml
@@ -8,7 +8,7 @@
 ## the terms contained in the LICENSE.txt file.
 ##############################################################################
 #schemaversion 3.0.0
-#once
+#once 000TopLevel.yaml
 #include AmcCarrierCore.yaml
 #include AmcCarrierDRAM.yaml
 #include AppTop.yaml
