--- a/firmware/targets/Lcls2PCav/Makefile
+++ b/firmware/targets/Lcls2PCav/Makefile
@@ -1,7 +1,13 @@
+export GIT_BYPASS = 1
+
 ##########################################################################################
 # Applications must define the 32-bitFirmware Version Number
 ##########################################################################################
-export PRJ_VERSION = 0x03030000
+# PRJ_VERSION = 0x00000001  Initial version based on MR LLRF
+# PRJ_VERSION = 0x00000002  No model implementation with BSA/BLD
+# PRJ_VERSION = 0x00000003  Refactor of code
+# PRJ_VERSION = 0x00000004  Use example model from Charlie
+export PRJ_VERSION = 0x00000004
 
 ##########################################################################################
 # Applications must define if using advance AMC carrier build
@@ -69,7 +75,7 @@ export COMMON_FILE = PhaseCavity
 #     If REMOVE_UNUSED_CODE = 0, all source code is kept after importing to Vivado project
 #     If REMOVE_UNUSED_CODE = 1, all unused source code is removed from Vivado project
 ##########################################################################################
-export REMOVE_UNUSED_CODE = 0
+export REMOVE_UNUSED_CODE = 1
 
 ##########################################################################################
 ############################  DO NOT EDIT THE CODE BELOW  ################################
