--- a/firmware/targets/LclsPCav/yaml/000TopLevel.yaml
+++ b/firmware/targets/LclsPCav/yaml/000TopLevel.yaml
@@ -13,6 +13,21 @@
 #include AmcCarrierDRAM.yaml
 #include AppTop.yaml
 
+
+# It is important to use the same parameters
+# for shared protocol modules (e.g., all RSSI
+# on the same port is in fact one single, shared
+# module)
+#
+connectionParameters:
+  udpPri:     &udpPri      80
+  udpThreads: &udpThreads   1
+  rssi: &rssiParams
+    retransmissionTimeoutUS: 100000
+    cumulativeAckTimeoutUS:   50000
+    threadPriority:             82
+
+
 #MMIO range, will be attached to FPGA
 mmio: &mmio
   size: 0x100000000 # 4GB of address space
@@ -58,8 +73,40 @@ strm: &strm
       AmcCarrierDRAM:
           <<: *AmcCarrierDRAM
           at:
-            offset: 0x00000000      
-  
+            offset: 0x00000000
+
+tstream: &tstream
+  SRP:
+    protocolVersion: SRP_UDP_NONE
+  UDP:
+    port: 8197
+    numRxThreads: *udpThreads
+    threadPriority:  *udpPri
+    pollSecs: 1
+
+bstream: &bstream
+  SRP:
+    protocolVersion: SRP_UDP_NONE
+  UDP:
+    port: 8195
+    numRxThreads: *udpThreads
+    threadPriority:  *udpPri
+    pollSecs: 1
+
+stream: &stream
+  SRP:
+    protocolVersion: SRP_UDP_NONE
+  UDP:
+    port: 8194
+    numRxThreads: *udpThreads
+    threadPriority:  *udpPri
+  RSSI: *rssiParams
+  depack:
+    useDepack: yes
+  TDESTMux:
+    stripHeader: yes
+    TDEST: 0x80
+
 NetIODev:
   ipAddr: 10.0.1.105
   class: NetIODev
@@ -69,9 +116,14 @@ NetIODev:
        <<: *mmio
        at:
          SRP:
-           protocolVersion: SRP_UDP_V2
+           protocolVersion: SRP_UDP_V3
          UDP:
-           port: 8192
+           port: 8193
+         RSSI: yes
+         depack:
+           useDepack: yes
+         TDESTMux:
+           TDEST: 0
      strm:
        <<: *strm
        at:
@@ -79,8 +131,67 @@ NetIODev:
            protocolVersion: SRP_UDP_V3
          UDP:
            port: 8194
-         RSSI: yes
+           numRxThreads: *udpThreads
+           threadPriority: *udpPri
+         RSSI: *rssiParams
          depack:
            useDepack: yes
          TDESTMux:
            TDEST: 4
+     tstream:
+       class: Field
+       at:
+         <<: *tstream
+     bstream:
+       class: Field
+       at:
+         <<: *bstream
+     Stream0:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x80
+     Stream1:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x81
+     Stream2:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x82
+     Stream3:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x83
+     Stream4:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x84
+     Stream5:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x85
+     Stream6:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x86
+     Stream7:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x87
+
