--- a/firmware/targets/Lcls2PCav/yaml/000TopLevel.yaml
+++ b/firmware/targets/Lcls2PCav/yaml/000TopLevel.yaml
@@ -13,6 +13,20 @@
 #include AmcCarrierDRAM.yaml
 #include AppTop.yaml
 
+# It is important to use the same parameters
+# for shared protocol modules (e.g., all RSSI
+# on the same port is in fact one single, shared
+# module)
+#
+connectionParameters:
+  udp: &udpParams
+    threadPriority: 80
+    numRxThreads:    4
+  rssi: &rssiParams
+    retransmissionTimeoutUS: 100000
+    cumulativeAckTimeoutUS:   50000
+    threadPriority:             82
+
 #MMIO range, will be attached to FPGA
 mmio: &mmio
   size: 0x100000000 # 4GB of address space
@@ -36,22 +50,45 @@ mmio: &mmio
             JesdRx:
               instantiate: true              
               metadata:
-                numRxLanes: &numRxLanes 6
+                numRxLanes: &numRxLanes 4
             JesdTx:
-              instantiate: false              
+              instantiate: true         
               metadata: 
-                numTxLanes: &numTxLanes 0              
+                numTxLanes: &numTxLanes 2              
         AppCore:
           children:
-            BLD:
-              instantiate: true
-              metadata:
-                numEdefs: &numEdefs 2
+#  This BLD module only found in NC PhaseCavity
+#            BLD:
+#              instantiate: true
+#              metadata:
+#                numEdefs: &numEdefs 2
             BSSS:
               instantiate: true
               metadata:
                 numEdefs: &numEdefs 8
     ################################################## 
+
+stream: &stream
+  SRP:
+    protocolVersion: SRP_UDP_NONE
+  UDP:
+    <<: *udpParams
+    port: 8194
+    numRxThreads: 2
+  RSSI:
+    <<: *rssiParams
+  stripHeader: yes
+  depack:
+    useDepack: yes
+  TDESTMux:
+    TDEST: 0x80
+
+tstream: &tstream
+  SRP:
+    protocolVersion: SRP_UDP_NONE
+  UDP:
+    port: 8197
+    pollSecs: 1
 
 strm: &strm
   size: 0x100000000 # 4GB of address space
@@ -61,7 +98,14 @@ strm: &strm
           <<: *AmcCarrierDRAM
           at:
             offset: 0x00000000      
-  
+
+bldstream: &bldstream
+  SRP:
+    protocolVersion: SRP_UDP_NONE
+  UDP:
+    <<: *udpParams
+    port: 8198
+    pollSecs: 1
 NetIODev:
   ipAddr: 10.0.1.105
   class: NetIODev
@@ -71,18 +115,83 @@ NetIODev:
        <<: *mmio
        at:
          SRP:
-           protocolVersion: SRP_UDP_V2
+           protocolVersion: SRP_UDP_V3
          UDP:
-           port: 8192
+#           <<: *udpParams
+           port: 8193
+         RSSI: yes
+#           <<: *rssiParams
+         depack:
+           useDepack: yes
+         TDESTMux:
+           TDEST: 0
      strm:
        <<: *strm
        at:
          SRP:
            protocolVersion: SRP_UDP_V3
          UDP:
+#           <<: *udpParams
            port: 8194
          RSSI: yes
+#           <<: *rssiParams
          depack:
            useDepack: yes
          TDESTMux:
            TDEST: 4
+     bldstream:
+       class: Field
+       at:
+         <<: *bldstream
+     tstream:
+       class: Field
+       at:
+         <<: *tstream
+     Stream0:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x80
+     Stream1:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x81
+     Stream2:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x82
+     Stream3:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x83
+     Stream4:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x84
+     Stream5:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x85
+     Stream6:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x86
+     Stream7:
+       class: Field
+       at:
+         <<: *stream
+         TDESTMux:
+           TDEST: 0x87
