--- a/firmware/common/PhaseCavity/yaml/AppDiagnBus.yaml
+++ b/firmware/common/PhaseCavity/yaml/AppDiagnBus.yaml
@@ -26,7 +26,7 @@ AppDiagnBus: &AppDiagnBus
       name: Cavity0Probe0PhaseOffset
       sizeBits: 18
       lsBit: 0
-      mode: RO
+      mode: RW
       description: Phase Offset (fixed point 18.15)
     #########################################################
     Cavity0Probe1PhaseOffset:
@@ -36,7 +36,7 @@ AppDiagnBus: &AppDiagnBus
       name: Cavity0Probe1PhaseOffset
       sizeBits: 18
       lsBit: 0
-      mode: RO
+      mode: RW
       description: Phase Offset (fixed point 18.15)
     #########################################################
     Cavity1Probe0PhaseOffset:
@@ -46,7 +46,7 @@ AppDiagnBus: &AppDiagnBus
       name: Cavity1Probe0PhaseOffset
       sizeBits: 18
       lsBit: 0
-      mode: RO
+      mode: RW
       description: Phase Offset (fixed point 18.15)
     #########################################################
     Cavity1Probe1PhaseOffset:
@@ -56,7 +56,7 @@ AppDiagnBus: &AppDiagnBus
       name: Cavity1Probe1PhaseOffset
       sizeBits: 18
       lsBit: 0
-      mode: RO
+      mode: RW
       description: Phase Offset (fixed point 18.15)
     #########################################################
     Cavity0Probe0Weight:
@@ -66,7 +66,7 @@ AppDiagnBus: &AppDiagnBus
       name: Cavity0Probe0Weight
       sizeBits: 2
       lsBit: 0
-      mode: RO
+      mode: RW
       description: Weighting (0,1,2)
     #########################################################
     Cavity0Probe1Weight:
@@ -76,7 +76,7 @@ AppDiagnBus: &AppDiagnBus
       name: Cavity0Probe1Weight
       sizeBits: 2
       lsBit: 0
-      mode: RO
+      mode: RW
       description: Weighting (0,1,2)
     #########################################################
     Cavity1Probe0Weight:
@@ -86,7 +86,7 @@ AppDiagnBus: &AppDiagnBus
       name: Cavity1Probe0Weight
       sizeBits: 2
       lsBit: 0
-      mode: RO
+      mode: RW
       description: Weighting (0,1,2)
     #########################################################
     Cavity1Probe1Weight:
@@ -96,6 +96,6 @@ AppDiagnBus: &AppDiagnBus
       name: Cavity1Probe1Weight
       sizeBits: 2
       lsBit: 0
-      mode: RO
+      mode: RW
       description: Weighting (0,1,2)
     #########################################################
